src/objects/StudentSubjects__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>StudentSubjectss</relationshipLabel>
        <relationshipName>StudentSubjectss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>StudentSubjects__c</referenceTo>
        <relationshipLabel>StudentSubjectss</relationshipLabel>
        <relationshipName>StudentSubjectss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subject</label>
        <referenceTo>Subject__c</referenceTo>
        <relationshipLabel>StudentSubjectss</relationshipLabel>
        <relationshipName>StudentSubjectss</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>StudentSubjects</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>StudentSubjects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentSubjectss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>